styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

html[data-theme="light"] {
  --background-color: #f5f6f9;
  --text-color: "black";
  /* --link-color: #543fd7; */
}

html[data-theme="dark"] {
  --background-color: #081c3b;
  --text-color: "white";

  /* --link-color: #828fff; */
}
.chakra-ui-dark {
  background-color: #081c3b;
  color: "white";
}
.chakra-ui-light {
  background-color: white;
  color: "black";
}

:root {
  --green: #039f65;
  --red: #f13d3d;
}
::-webkit-scrollbar {
  width: 0px;
  background: transparent; /* make scrollbar transparent */
}

/* 
Chakra Ui overwrites */
.chakra-tabs__tab {
  padding: 0 !important;
}
.css-gkyhes[aria-selected="true"] {
  color: #4983c7 !important;
}

.h-4 {
  font-weight: 700;
  font-size: 20px;
}
.h-5 {
  font-weight: 700;
  font-size: 16px;
}
@media screen and (max-width: 479px) {
  .h-4 {
    font-weight: 700;
    font-size: 16px;
  }
  .h-5 {
    font-weight: 700;
    font-size: 12px;
  }
}
.input {
  background-color: transparent;
  width: 100%;
}

.input:focus-visible {
  outline: unset !important;
}
.range [aria-valuenow] {
  /* background-color: purple; */
  background: linear-gradient(
    90deg,
    hsla(0, 100%, 50%, 1) 0%,
    hsla(60, 100%, 50%, 1) 50%,
    hsla(120, 100%, 50%, 1) 100%
  );
}

.container ::-webkit-scrollbar {
  display: none;
}

